--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
   "author": "Mitchel Follett",
   "license": "MIT",
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "eslint": "^7.24.0",
+    "express": "^4.17.1",
+    "lint": "^0.7.0",
+    "mongoose-unique-validator": "^2.0.3",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.7",
+    "prettier-eslint": "^12.0.0"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "morgan": "^1.10.0"
+    "mongoose": "^5.12.4"
   }
 }
